--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>AWS Cloud Engineer &amp; DevOps Engineer</h3>
+            <h3>AWS Cloud Services &amp; DevOps Engineer</h3>
             <p class="fst-italic">
-             As an AWS & DevOps Engineer, my oal is to help clients make better business decisions. I enable them to perform to higher standarts by analysing complex data andm areas. If you want to know more, please feel free to contact me.
+             As an AWS & DevOps Engineer, my goal is to help clients make better business decisions. I enable them to perform to higher standarts by analysing complex data andm areas. If you want to know more, please feel free to contact me.
             </p>
             <div class="row">
               <div class="col-lg-6">
