--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>AWS Cloud Services &amp; DevOps Engineer</h3>
             <p class="fst-italic">
-             As an AWS & DevOps Engineer, my goal is to help clients make better business decisions. I enable them to perform to higher standarts by analysing complex data andm areas. If you want to know more, please feel free to contact me.
+             As an AWS & DevOps Engineer, my goal is to help clients make better business decisions. I enable them to perform to higher standarts by analysing complex data and areas. If you want to know more, please feel free to contact me.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>9 May 1986</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>abetr.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+90 532 228 21 58</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+90 532 *** ** **</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ankara, Turkiye</span></li>
                 </ul>
               </div>
